added label css for dynamo saving

--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,10 @@
 body {
   background: url('../img/container-bg.jpg') repeat;
 }
+.save_status.saving-changes {
+  /* label-info */
+  background-color: #3a87ad;
+}
 .save_status.unsaved_changes {
   /* label-warning */
   background-color: #f89406;
